# Copyright 2021-2022 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

executable(
  'pugl_clipboard_demo',
  '../../pugl_clipboard_demo.c',
  c_args: example_defines + example_c_args,
  dependencies: [pugl_dep, gl_backend_dep],
  include_directories: include_directories('../../..'),
)
